bk_ida/gccida/g2/ix86_va_start
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2987:5: error: expected ';' after expression
tree v20; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2987:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
tree v20; // rax 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2977:6: note: 'v10' declared here
tree v10; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2988:5: error: expected ';' after expression
tree v21; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2988:6: error: use of undeclared identifier 'v21'; did you mean 'v11'?
tree v21; // rax 
     ^~~
     v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2978:6: note: 'v11' declared here
tree v11; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2989:5: error: expected ';' after expression
tree v22; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2989:6: error: use of undeclared identifier 'v22'
tree v22; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2990:5: error: expected ';' after expression
tree v23; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2990:6: error: use of undeclared identifier 'v23'; did you mean 'v3'?
tree v23; // rax 
     ^~~
     v3
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2970:11: note: 'v3' declared here
__int64 **v3; // r15 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3000:35: error: expected ')'
v8 = build( COMPONENT_REF, ( tree)v3[1], v7, v3); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3000:11: note: to match this '('
v8 = build( COMPONENT_REF, ( tree)v3[1], v7, v3); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3001:35: error: expected ')'
v9 = build( COMPONENT_REF, ( tree)v4[1], v7, v4); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3001:11: note: to match this '('
v9 = build( COMPONENT_REF, ( tree)v4[1], v7, v4); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3002:36: error: expected ')'
v10 = build( COMPONENT_REF, ( tree)v5[1], v7, v5); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3002:12: note: to match this '('
v10 = build( COMPONENT_REF, ( tree)v5[1], v7, v5); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3003:38: error: expected expression
v11 = build( COMPONENT_REF, *( tree *)( v6 + 8), v7, v6); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3031:1: error: use of undeclared identifier 'v20'; did you mean 'v10'?
v20 = build_int_2_wide( 
^~~
v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2977:6: note: 'v10' declared here
tree v10; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3034:50: error: use of undeclared identifier 'v20'; did you mean 'v10'?
tree = build( PLUS_EXPR, v10->common.type, tree, v20); 
                                                 ^~~
                                                 v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2977:6: note: 'v10' declared here
tree v10; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3036:1: error: use of undeclared identifier 'v21'; did you mean 'v11'?
v21 = build( MODIFY_EXPR, v10->common.type, v10, tree); 
^~~
v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2978:6: note: 'v11' declared here
tree v11; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3037:15: error: use of undeclared identifier 'v21'; did you mean 'v11'?
*( ( _BYTE *)&v21->block.common + 17) |= 1u; 
              ^~~
              v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2978:6: note: 'v11' declared here
tree v11; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3038:14: error: use of undeclared identifier 'v21'; did you mean 'v11'?
expand_expr( v21, const_int_rtx[64], VOIDmode, EXPAND_NORMAL); 
             ^~~
             v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2978:6: note: 'v11' declared here
tree v11; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3039:1: error: use of undeclared identifier 'v22'
v22 = make_tree( v11->common.type, global_rtl[3]); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:3040:1: error: use of undeclared identifier 'v23'; did you mean 'v3'?
v23 = build( MODIFY_EXPR, v11->common.type, v11, v22); 
^~~
v3
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/i386.c:2970:11: note: 'v3' declared here
__int64 **v3; // r15 
          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_va_start/src/obj/i386.o] Error 1
